Added options to use clj-async-profiler